--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+main{
+    display: grid;
+    place-content: center;
+    height: 100vh;
+    width: 100vw;
+}
