--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,13 @@
 @tailwind components;
 @tailwind utilities;
 
-main{
-    display: grid;
-    place-content: center;
-    height: 100vh;
-    width: 100vw;
+main {
+  display: grid;
+  place-content: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.section__container {
+  box-shadow: 0px 0px 0px 1px #e8eaee, 0px 12px 40px -8px rgba(0, 0, 0, 0.25);
 }
