--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,33 @@ main {
 .section__container {
   box-shadow: 0px 0px 0px 1px #e8eaee, 0px 12px 40px -8px rgba(0, 0, 0, 0.25);
 }
+
+.button-secondary {
+  height: 34px;
+  padding: 0 16px;
+  display: inline-flex;
+  align-items: center;
+  gap: 4px;
+  color: #fff;
+  background: linear-gradient(182deg, #1b3354 31.03%, #001128 99.96%);
+  width: fit-content;
+  font-size: 15px;
+  font-weight: 700;
+  border-radius: 0.65rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 32, 112, 0.15);
+  transition: all 300ms ease;
+
+  > svg {
+    transition: all 300ms ease;
+  }
+
+  &:hover {
+    transition: all 300ms ease;
+    opacity: 0.8;
+  }
+}
+
+.button-secondary:hover > svg {
+  transition: all 300ms ease;
+  transform: translateX(2px);
+}
