--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ main {
   align-items: center;
   gap: 4px;
   color: #fff;
+  margin: 0 0 1rem 0;
   background: linear-gradient(182deg, #1b3354 31.03%, #001128 99.96%);
   width: fit-content;
   font-size: 15px;
@@ -43,4 +44,21 @@ main {
 .button-secondary:hover > svg {
   transition: all 300ms ease;
   transform: translateX(2px);
+}
+
+.slide-entry {
+  opacity: 0;
+  animation: slide-arriba 400ms cubic-bezier(0, 0, 0.2, 1) both;
+}
+
+@keyframes slide-arriba {
+  from {
+    transform: translateY(20px);
+    opacity: 0;
+  }
+
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
